[tool.poetry]
name = "association-backend"
version = "0.1.0"
description = ""
authors = ["Mathias <mathias.scroccaro@gmail.com>"]
readme = "README.md"
packages = [{include = "association_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
black = "^23.9.1"
django-ckeditor = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
